--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <!--Display Window-->
       <div class="text-center items-center mx-auto   w-5/6">
 
-        <div id="" class=" w-11/12  h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
+        <div id="" class=" w-full  h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
           <div id="display" data-previous-operand class=" text-white pt-4 text-right  text-3xl"> </div>
           <!-- <div data-current-operand class="text-white text-right pl-36">4564  </div> -->
         </div>
 
-        <div class="grid grid-cols-4 gap-4 bg-white-600 w-11/12 h-98 mx-auto">
+        <div class="grid grid-cols-4 gap-4 bg-white-600 w-full h-98 mx-auto">
           <button data-all-clear class="p-4 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">AC</button>
           <button data-operation class="p-3 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">/</button>
           <button data-operation class="p-3  text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">*</button>
