--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
  
      
-      <h1 class="text-2xl text-center family-monospace font-bold ">MODERN CALCULATOR</h1>
+      <h1 class="text-2xl text-center my-8 family-monospace font-bold ">MODERN CALCULATOR</h1>
     <div class="  p-4  w-full md:w-5/12 mx-auto h-96">
       <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
         <!--Display Window-->
