--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <body>
  
      
-      <h1 class="text-2xl text-center my-8 family-monospace font-bold ">MODERN CALCULATOR</h1>
+      <h1 class="text-2xl text-center text-slate-800 my-8 family-monospace font-bold ">MODERN CALCULATOR</h1>
     <div class="  p-4  w-full md:w-5/12 mx-auto h-96">
       <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
         <!--Display Window-->
-      <div class="text-center items-center mx-auto   w-5/6">
+      <div class="text-center bg-slate-800 items-center mx-auto   w-5/6">
 
         <div id="" class=" w-full  h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
           <div id="display" data-previous-operand class=" text-white pt-4 text-right  text-3xl"> </div>
