--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="  p-4  w-full md:w-5/12 mx-auto h-96">
       <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
         <!--Display Window-->
-      <div class="text-center bg-slate-800 items-center mx-auto   w-5/6">
+      <div class="text-center  items-center mx-auto   w-5/6">
 
-        <div id="" class=" w-full  h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
+        <div id="" class=" w-full bg-slate-800  h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
           <div id="display" data-previous-operand class=" text-white pt-4 text-right  text-3xl"> </div>
           <!-- <div data-current-operand class="text-white text-right pl-36">4564  </div> -->
         </div>
