--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="text-center  items-center mx-auto   w-5/6">
 
         <div id="" class=" w-full   h-20 flex flex-col items-end  break-all rounded-md bg-black  text-left font-semibold font-2xl items-center mx-auto w-30 ">
-          <div id="display" data-previous-operand class=" text-white-400 bg-slate-800 pt-4 text-right  text-3xl"> </div>
+          <div id="display" data-previous-operand class=" text-white bg-slate-800 pt-4 text-right  text-3xl"> </div>
           <!-- <div data-current-operand class="text-white text-right pl-36">4564  </div> -->
         </div>
 
