--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
  
      
-      <h1 class="text-2xl text-center text-slate-800 my-8 family-monospace font-bold ">MODERN CALCULATOR</h1>
+      <h1 class="text-2xl text-center text-slate-800 mt-8 family-monospace font-bold ">MODERN CALCULATOR</h1>
     
     <div class="  p-4  w-full md:w-5/12 mx-auto h-96">
       <p id="demo" class="text-slate-800 text-center text-2xl font-bold"></p>
