--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="  p-4 md:p-2 w-full md:w-8/12 mx-auto h-96">
       <p id="demo" class="text-slate-800 mb-4 md:mb-2  text-center text-xl font-bold"></p>
             <p id="next" class="text-slate-800 mb-4 md:mb-2 text-center text-xl font-bold"></p>
-       <p id="greeting" class="text-slate-800 mb-4 md:mb-2 text-center text-xl font-bold"></p>
+       <p id="greeting" class="text-slate-800 mb-4 md:mb-2 md:hidden text-center text-xl font-bold"></p>
       
       <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
         <!--Display Window-->
