--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <h1 class="text-2xl text-center text-slate-800 mt-2 md:mt-2 family-monospace font-bold ">MODERN CALCULATOR</h1>
     
     <div class="  p-4 md:p-2 w-full md:w-8/12 mx-auto md:h-80 h-96">
-      <p id="demo" class="text-slate-800 mb-4 md:mb-2  text-center text-xl font-bold"></p>
-            <p id="next" class="text-slate-800 mb-4 md:mb-2 text-center text-xl font-bold"></p>
-       <p id="greeting" class="text-slate-800 mb-4 md:mb-2  text-center text-xl font-bold"></p>
+      <p id="demo" class="text-slate-800 md:hidden mb-4 md:mb-0  text-center text-xl font-bold"></p>
+            <p id="next" class="text-slate-800 mb-4 md:mb-0 text-center text-xl font-bold"></p>
+       <p id="greeting" class="text-slate-800 mb-4 md:mb-0  text-center text-xl font-bold"></p>
       
       <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
         <!--Display Window-->
@@ -46,7 +46,7 @@
           <!-- <div data-current-operand class="text-white text-right pl-36">4564  </div> -->
         </div>
 
-        <div class="grid grid-cols-4 gap-4 bg-white-600 w-full h-98 mx-auto">
+        <div class="grid grid-cols-4 gap-4 bg-white-600 w-full md:h-80 h-98 mx-auto">
           <button data-all-clear class="p-4 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">AC</button>
           <button data-operation class="p-3 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">/</button>
           <button data-operation class="p-3  text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">*</button>
