--- a/index (2).html
+++ b/index (2).html
@@ -30,8 +30,8 @@
  
      
       <h1 class="text-xl text-center family-monospace font-bold ">MODERN CALCULATOR</h1>
-    <div class="  p-4  w-full md:w-5/12 mx-auto h-48">
-      <div class="  outline-8   rounded-lg h-24 w-full mx-auto">
+    <div class="  p-4  w-full md:w-5/12 mx-auto sm:h-32 h-48">
+      <div class="  outline-8   rounded-xlg h-24 w-full mx-auto">
         <!--Display Window-->
       <div class="text-center items-center mx-auto   w-5/6">
 
