--- a/index (2).html
+++ b/index (2).html
@@ -55,7 +55,7 @@
 
 
 
-          <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1 my-0">4</button>
+<!--           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1 my-0">4</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">5</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">6</button>
           <button data-operation class="p-3 text-orange-600 font-bold hover:bg-slate-200  text-3xl bg-slate-50 gap-1 mr-1">+</button>
@@ -67,7 +67,7 @@
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">3</button>
           <button data-operation="" class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">%</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">0</button>
-          <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">.</button>
+          <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">.</button> -->
     
           
 
