--- a/index (2).html
+++ b/index (2).html
@@ -29,7 +29,7 @@
   <body>
  
      
-      <h1 class="text-xl text-center family-monospace font-bold ">MODERN CALCULATOR</h1>
+<!--       <h1 class="text-xl text-center family-monospace font-bold ">MODERN CALCULATOR</h1>
     <div class="  p-4  w-full md:w-5/12 mx-auto sm:h-32 h-48">
       <div class="  outline-8   rounded-xlg h-24 w-full mx-auto">
         <!--Display Window-->
@@ -40,7 +40,7 @@
           <!-- <div data-current-operand class="text-white text-right pl-36">4564  </div> -->
         </div>
 
-        <div class="grid grid-cols-4 gap-4 bg-white-600 w-11/12 h-98 mx-auto">
+<!--         <div class="grid grid-cols-4 gap-4 bg-white-600 w-11/12 h-98 mx-auto">
           <button data-all-clear class="p-4 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">AC</button>
           <button data-operation class="p-3 text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">/</button>
           <button data-operation class="p-3  text-orange-600 font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">*</button>
@@ -51,10 +51,10 @@
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">7</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">8</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">9</button>
-          <button data-operation class="p-3 text-orange-600 font-bold  hover:bg-slate-200 text-2xl bg-slate-50 gap-1 mr-1">-</button>
+          <button data-operation class="p-3 text-orange-600 font-bold  hover:bg-slate-200 text-2xl bg-slate-50 gap-1 mr-1">-</button> -->
 
 
-
+ 
 <!--           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1 my-0">4</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">5</button>
           <button data-number class="p-4 text-black font-bold text-2xl hover:bg-slate-200 bg-slate-50 gap-1">6</button>
