--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <script src="index.js"></script>
+    <script src=""></script>
     <script>
       tailwind.config = {
         theme: {
